--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 			</div>
         </div>
       </div>
+      <a href="https://github.com/dgriba/weatherpanel">Code Source</a>
 </script>
 <script>
   // task is to change march to date - pending format
