--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <script src="src/styles.css"></script>
+    <title>Weather Panel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/487fcdfe04.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
@@ -23,69 +24,71 @@
 
         </div>
         <br />
+        <div class="weather-panel" id="weather-panelid">
 
-        <h1>Guadalddddajara</h1>
+            <h1>Guadalddddajara</h1>
 
-        <div class="mininum" id="datetoday"> March
-        </div>
+            <div class="mininum" id="datetoday"> March
+            </div>
 
-        <div class="mininum">Humidity <strong>78%</strong> Wind <strong>54%</strong>
-        </div>
+            <div class="mininum">Humidity <strong>78%</strong> Wind <strong>54%</strong>
+            </div>
 
-        <div class="currentemp">
-            <i class="fa-solid fa-sun"></i>
-            <strong id="currentCelsiusNumber">28</strong> <small>
+            <div class="currentemp">
+                <i class="fa-solid fa-sun"></i>
+                <strong id="currentCelsiusNumber">28</strong> <small>
              <sup id= "cunit">°C </sup></small> | <small>
                 <sup id= "funit">°F</sup></small>
-        </div>
+            </div>
 
-        <div class="row dow">
-            <div class="col">
-                Mon
-                <br>
-                <i class="fa-solid fa-sun tempicon"></i>
-                <div class="hilow">
-                    <strong>30 <sup>°C</sup></strong>/ 9
-                    <sup>°C</sup>
+            <div class="row dow">
+                <div class="col">
+                    Mon
+                    <br>
+                    <i class="fa-solid fa-sun tempicon"></i>
+                    <div class="hilow">
+                        <strong>30 <sup>°C</sup></strong>/ 9
+                        <sup>°C</sup>
+                    </div>
+                </div>
+                <div class="col">Tue
+                    <br>
+                    <i class="fa-solid fa-cloud-sun tempicon"></i>
+                    <div class="hilow">
+                        <strong>26 <sup>°C</sup></strong>/ 5
+                        <sup>°C</sup>
+                    </div>
+                </div>
+                <div class="col">Wed
+                    <br>
+                    <i class="fa-solid fa-cloud-rain tempicon"></i>
+                    <div class="hilow">
+                        <strong>21 <sup>°C</sup></strong>/ 4
+                        <sup>°C</sup>
+                    </div>
+                </div>
+                <div class="col">Thu
+                    <br>
+                    <i class="fa-solid fa-cloud-sun tempicon"></i>
+                    <div class="hilow">
+                        <strong>23 <sup>°C</sup></strong>/ 4
+                        <sup>°C</sup>
+                    </div>
+                </div>
+                <div class="col">Fri
+                    <br>
+                    <i class="fa-solid fa-wind tempicon"></i>
+                    <div class="hilow">
+                        <strong>19 <sup>°C</sup></strong> 3
+                        <sup>°C</sup>
+                    </div>
                 </div>
             </div>
-            <div class="col">Tue
-                <br>
-                <i class="fa-solid fa-cloud-sun tempicon"></i>
-                <div class="hilow">
-                    <strong>26 <sup>°C</sup></strong>/ 5
-                    <sup>°C</sup>
-                </div>
-            </div>
-            <div class="col">Wed
-                <br>
-                <i class="fa-solid fa-cloud-rain tempicon"></i>
-                <div class="hilow">
-                    <strong>21 <sup>°C</sup></strong>/ 4
-                    <sup>°C</sup>
-                </div>
-            </div>
-            <div class="col">Thu
-                <br>
-                <i class="fa-solid fa-cloud-sun tempicon"></i>
-                <div class="hilow">
-                    <strong>23 <sup>°C</sup></strong>/ 4
-                    <sup>°C</sup>
-                </div>
-            </div>
-            <div class="col">Fri
-                <br>
-                <i class="fa-solid fa-wind tempicon"></i>
-                <div class="hilow">
-                    <strong>19 <sup>°C</sup></strong> 3
-                    <sup>°C</sup>
-                </div>
-            </div>
-        </div>
-        <small>
+            <small>
       
       <a href="https://github.com/dgriba/weatherpanel">Code Source</a>
 </small>
+        </div>
     </div>
 
     </script>
