h1 from Gdl to PV

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br />
         <div class="weather-panel" id="weather-panelid">
 
-            <h1>Guadalddddajara</h1>
+            <h1>Puerto Vallarta</h1>
 
             <div class="mininum" id="datetoday"> March
             </div>
@@ -86,7 +86,7 @@
             </div>
             <small>
       
-      <a href="https://github.com/dgriba/weatherpanel">Code Source</a>
+      <a href="https://github.com/dgriba/weatherpanel">Code Source</a> by Diana Guerrero
 </small>
         </div>
     </div>
