--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="src/styles.css"></script>
-    <title>Weather Panel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/487fcdfe04.js" crossorigin="anonymous"></script>
+    <script src="src/styles.css"></script>
+    <link rel="stylesheet" href="src/styles.css">
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <title>Weather Panel</title>
 </head>
 
 <body>
-    <div class="container" id="site-containter">
-        <img src="medias/weather.png" alt="logo" class="logo">
-        <br />
+    <div class="container" id="site-container">
         <div>
             <form id="searchline" class="searchbar">
                 <input type="searchform" id="search-input" placeholder="Type a city...">
@@ -23,6 +22,7 @@
 
         </div>
         <br />
+
         <div class="weather-panel" id="weather-panelid">
 
             <h1>Puerto Vallarta</h1>
@@ -37,9 +37,8 @@
                 <i class="fa-solid fa-sun"></i>
                 <strong id="currentCelsiusNumber">28</strong> <small>
              <sup id= "cunit">°C </sup></small> |
-                <a href="" id="funit"> <small>
-                    <sup>
-                    °F </sup>  </small> </a>
+                <small>
+                    <sup>°F </sup>  </small>
             </div>
             <!---
             <div class="row dow">
@@ -85,32 +84,20 @@
                 </div>
             </div>
         </div>
-        <small>
-      -->
-            <a href="https://github.com/dgriba/weatherpanel">Code Source</a> by Diana Guerrero
-            </small>
+         -->
+            <small>
+    </div>
+<a href="https://github.com/dgriba/weatherpanel">Code Source</a> by Diana Guerrero
+        </small>
         </div>
     </div>
-
+    </div>
+    </div>
     </script>
     <script>
-        // task is to change march to date - pending format
-        let months = [
-            "Jan",
-            "Feb",
-            "Mar",
-            "Apr",
-            "May",
-            "Jun",
-            "Jul",
-            "Aug",
-            "Sep",
-            "Oct",
-            "Nov",
-            "Dec"
-        ];
+        // task is to change march to date - pending format 
+        let months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
         let days = ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
-
         let now = new Date();
         let day = days[now.getDay()];
         let month = months[now.getMonth()];
